RESOLVED FIXED171642
Crash when pointer lock element is removed before pointer lock allowed arrives.
https://bugs.webkit.org/show_bug.cgi?id=171642
Summary Crash when pointer lock element is removed before pointer lock allowed arrives.
Jeremy Jones
Reported 2017-05-03 18:21:57 PDT
Crash when pointer lock element is removed before pointer lock allowed arrives.
Attachments
Patch (1.46 KB, patch)
2017-05-03 18:26 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-05-03 18:22:57 PDT
Jeremy Jones
Comment 2 2017-05-03 18:26:02 PDT
WebKit Commit Bot
Comment 3 2017-05-04 14:39:48 PDT
Comment on attachment 308998 [details] Patch Clearing flags on attachment: 308998 Committed r216209: <http://trac.webkit.org/changeset/216209>
WebKit Commit Bot
Comment 4 2017-05-04 14:39:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.