Crash when pointer lock element is removed before pointer lock allowed arrives. https://bugs.webkit.org/show_bug.cgi?id=171642

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-05-04
Reviewed by Jer Noble.

Make sure there a pending lock before attempting to complete pointer lock.

* page/PointerLockController.cpp:
(WebCore::PointerLockController::didAcquirePointerLock):

Canonical link: https://commits.webkit.org/188589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216209 268f45cc-cd09-0410-ab3c-d52691b4dbfc